<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101633"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/madimi"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:text="NEWS FEED"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold">
                </TextView>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/worldnews"
                    android:paddingTop="15dp"
                    android:paddingRight="20dp">
                </ImageView>



            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/tab"
        android:layout_below="@+id/toolbar_layout"
        android:background="#101633"
        app:tabTextColor="@color/white"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorHeight="3.5dp"
        app:tabMode="scrollable"
        android:layout_margin="0dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home">
        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology">
        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports">
        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BUSINESS">
        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HEALTH">
        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/entertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment">
        </com.google.android.material.tabs.TabItem>
        
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tab"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/contains_fragments1"></androidx.viewpager.widget.ViewPager>

</RelativeLayout>
